# adventofcode2021

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: automerge.yml  tox.yml
src/adventofcode2021/: main.py
src/adventofcode2021/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
src/adventofcode2021/utils/: abstract.py  advent_utils.py
template/: cookiecutter.json
template/hooks/: pre_gen_project.py
template/{{cookiecutter.advendofcode2021}}/src/adventofcode2021/solutions/: {{cookiecutter.file_name}}.py
template/{{cookiecutter.advendofcode2021}}/tests/solutions/: test_{{cookiecutter.file_name}}_a.py  test_{{cookiecutter.file_name}}_b.py
tests/: test_advent_utils.py
tests/solutions/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py
