[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = "Advent of Code - 2021"
authors = ["Roel Adriaans <roel@adriaans.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
click = "^8.0.4"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^22.1"
cookiecutter = "^1.7.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
python-dotenv = "^0.19.2"
tox = "^3.24.5"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[tool.poetry.scripts]
adventofcode = "adventofcode2021.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
