[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = "Advent of Code - 2021"
authors = ["Roel Adriaans <roel@adriaans.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anytree = "^2.8.0"
click = "^8.1.3"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
cookiecutter = "^1.7.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
python-dotenv = "^0.20.0"
tox = "^3.25.1"
pre-commit = "^2.18.1"
isort = "^5.10.1"

[tool.poetry.scripts]
adventofcode = "adventofcode2021.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
